@@ -548,6 +548,14 @@ typedef BYTE BOOLEAN,*PBOOLEAN;
 #define PROCESSOR_ARCHITECTURE_ALPHA 2
 #define PROCESSOR_ARCHITECTURE_PPC 3
 #define PROCESSOR_ARCHITECTURE_UNKNOWN 0xFFFF
+#define PF_FLOATING_POINT_PRECISION_ERRATA 0
+#define PF_FLOATING_POINT_EMULATED 1
+#define PF_COMPARE_EXCHANGE_DOUBLE 2
+#define PF_MMX_INSTRUCTIONS_AVAILABLE 3
+#define PF_PPC_MOVEMEM_64BIT_OK 4
+#define PF_ALPHA_BYTE_INSTRUCTIONS 5
+#define PF_XMMI_INSTRUCTIONS_AVAILABLE 6
+#define PF_3DNOW_INSTRUCTIONS_AVAILABLE 7
 #define PAGE_READONLY 2
 #define PAGE_READWRITE 4
 #define PAGE_WRITECOPY 8
